feat:started html and css. Added colour palette from Coolors and font.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Inter&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e62857fc86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/CSS/style.css">
-    <title>Document</title>
+    <title>Spelling Game</title>
 </head>
 <body>
+    <div class="container">
+        <div id="home" class="flex-column flex-center">
+            <h1>Let's Play</h1>
+
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/contact.html" id="contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
+
+        </div>
+
+    </div>
 
 <script src="assets/js/script.js"></script>
+
 </body>
 </html>
