feat: added styling to buttons in style sheet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Let's Play</h1>
 
             <a href="/game.html" class="btn">Play</a>
-            <a href="/contact.html" id="contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
+            <a href="/contact.html" id="contact-btn" class="btn">Contact Us<i class="fa-regular fa-message"></i></a>
 
         </div>
 
