feat: changed href for contact button to allow modal to work and added prevent default to javascript and added to CSS for the contact form.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Let's Play</h1>
 
             <a href="/game.html" class="btn">Play</a>
-            <a href="/contact.html" id="contact-btn" class="btn">Contact Us<i class="fa-regular fa-message"></i></a>
+            <a href="#" id="contact-btn" class="btn contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
 
         </div>
 
@@ -42,7 +42,7 @@
             <br>
         
 			<input type="radio" id="parent" name="parent">
-			<label for="non-climber">I'm a parent</label>
+			<label for="parent">I'm a parent</label>
 
         
 		<br>
