feat: edited file path for game.html so that it links up correctly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="home" class="flex-column flex-center">
             <h1>Let's Play</h1>
 
-            <a href="/game.html" class="btn">Play</a>
+            <a href="assets/html/game.html" class="btn">Play</a>
             <a href="#" id="contact-btn" class="btn contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
 
         </div>
