--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -23,10 +23,22 @@
                     Question
                 </p>
 
-                <div class="progress-bar"></div>
+                <div id="progress-bar"></div>
+                <div id="progressBarFull"></div>
 
 
             </div>
+        </div>
+
+        <div class="hud-item">
+            <p class="hud-prefix">
+                Score
+            </p>
+
+            <h1 class="hud-main-text" id="score">
+                0
+            </h1>
+            
         </div>
 
     </div>
