--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spelling Game</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="/assets/CSS/style.css">
+    
+    <link rel="stylesheet" href=/assets/CSS/game.css">
 </head>
 
 <!--Guidance for this site was taken from the youtube video https://www.youtube.com/watch?v=f4fB9Xg2JEY and adapted to suit my needs -->
