feat: began game css styles

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -6,7 +6,7 @@
     <title>Spelling Game</title>
     <link rel="stylesheet" href="/assets/CSS/style.css">
     
-    <link rel="stylesheet" href=/assets/CSS/game.css">
+    <link rel="stylesheet" href="/assets/CSS/game.css">
 </head>
 
 <!--Guidance for this site was taken from the youtube video https://www.youtube.com/watch?v=f4fB9Xg2JEY and adapted to suit my needs -->
@@ -44,17 +44,20 @@
 
         <div id="question">This is the question</div>
 
-        <div class="answer-container"></div>
+        <div class="answer-container">
         <p class="answer-prefix">1</p>
         <p class="answer-text" data-number="1">There</p>  
-        
-        <div class="answer-container"></div>
-        <p class="answer-prefix">2</p>
-        <p class="answer-text" data-number="2">Their</p>   
+        </div>
 
-        <div class="answer-container"></div>
+        <div class="answer-container">
+        <p class="answer-prefix">2</p>
+        <p class="answer-text" data-number="2">Their</p> 
+        </div>  
+
+        <div class="answer-container">
         <p class="answer-prefix">3</p>
         <p class="answer-text" data-number="3">They're</p>   
+    </div>
 
     </div>
 
