feat: added a container for the question

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -42,7 +42,7 @@
             
         </div>
 
-        <div id="question">This is the question</div>
+        <div id="question" class="question-container"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec mollis est. In eget hendrerit ipsum. Suspendisse tempor mattis eros sit amet imperdiet. Curabitur vel semper lorem, ut tincidunt sapien. </div>
 
         <div class="answer-container">
         <p class="answer-prefix">1</p>
