feat: began game javescript

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -46,17 +46,17 @@
 
         <div class="answer-container">
         <p class="answer-prefix">1</p>
-        <p class="answer-text" data-number="1">There</p>  
+        <p id="ansBox1" class="answer-text" data-number="1">There</p>  
         </div>
 
         <div class="answer-container">
         <p class="answer-prefix">2</p>
-        <p class="answer-text" data-number="2">Their</p> 
+        <p id="ansBox2" class="answer-text" data-number="2">Their</p> 
         </div>  
 
         <div class="answer-container">
         <p class="answer-prefix">3</p>
-        <p class="answer-text" data-number="3">They're</p>   
+        <p id="ansBox3" class="answer-text" data-number="3">They're</p>   
     </div>
 
     </div>
