--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -44,17 +44,17 @@
 
         <div id="question" class="question-container"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec mollis est. In eget hendrerit ipsum. Suspendisse tempor mattis eros sit amet imperdiet. Curabitur vel semper lorem, ut tincidunt sapien. </div>
 
-        <div class="answer-container">
+        <div onclick="answerGuess(1)" class="answer-container">
         <p class="answer-prefix">1</p>
         <p id="ansBox1" class="answer-text" data-number="1">There</p>  
         </div>
 
-        <div class="answer-container">
+        <div onclick="answerGuess(2)" class="answer-container">
         <p class="answer-prefix">2</p>
         <p id="ansBox2" class="answer-text" data-number="2">Their</p> 
         </div>  
 
-        <div class="answer-container">
+        <div onclick="answerGuess(3)" class="answer-container">
         <p class="answer-prefix">3</p>
         <p id="ansBox3" class="answer-text" data-number="3">They're</p>   
     </div>
