feat: added event listener to modal for end game. Closes modal and returns to home page

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -72,6 +72,7 @@
             <p>Score: 5-8 I Bet You Could Get 10 Next Time, Good Job</p>
             <p>Score: 0-5 Practice makes permanent. Check the use of the words then come back to have another go.</p>
             
+            <button onclick="modalHome" class="modal-home">Return Home</button>
         </div>
 
     </div>
