feat: added a button for how to play and did modal content in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1>Let's Play</h1>
 
             <a href="assets/html/game.html" class="btn">Play</a>
+            <a href="#" id="rules-btn" class="btn rulesBtn">How To Play</a>
             <a href="#" id="contact-btn" class="btn contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
 
         </div>
@@ -23,7 +24,7 @@
     </div>
 
     <!-- Guidance on modals taken from youtube video https://www.youtube.com/watch?v=KjQ8uvAt9kQ Form use and features were adapted to meet the needs of the project -->
-
+<!-- Modal for contact form -->
     <div class="modal-con">
         <div class="modal">
             <h2>Let Us Know</h2>
@@ -66,6 +67,31 @@
            
 
         </div>
+
+    </div>
+
+    <div class="modal-rules">
+
+        <div class="modal">
+
+            <h1>Here's How to Play </h1>
+
+            <ol>
+                <li>Click on the play button</li>
+                <li>Each question has a word missing</li>
+                <li>Read the question</li>
+                <li>Decide which word you need to use to complete the sentence</li>
+                <li>Click the button with your selected word</li>
+                <li>There are 10 questions complete them all and see how you do</li>
+            </ol>
+            <h2>Refresh Your Understanding</h2>
+            <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms. </p>
+            <br>
+            <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.</p>
+
+        </div>
+
+
 
     </div>
 
