feat: working on the java script for the rules modal. Not working at the moment.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Let's Play</h1>
 
             <a href="assets/html/game.html" class="btn">Play</a>
-            <a href="#" id="rules-btn" class="btn rulesBtn">How To Play</a>
+            <a href="#" id="rules-btn" class="btn rules-btn">How To Play</a>
             <a href="#" id="contact-btn" class="btn contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
 
         </div>
@@ -70,6 +70,8 @@
 
     </div>
 
+    <!-- Modal for rules page -->
+
     <div class="modal-rules">
 
         <div class="modal">
@@ -88,6 +90,8 @@
             <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms. </p>
             <br>
             <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.</p>
+
+            <span class="modal-close">X</span>
 
         </div>
 
