feat: tidied up script js. Also condensed styles for modals into one class. Added different class to rules modal close so that the button worked and made the styles in CSS.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Guidance on modals taken from youtube video https://www.youtube.com/watch?v=KjQ8uvAt9kQ Form use and features were adapted to meet the needs of the project -->
 <!-- Modal for contact form -->
 
-    <div class="modal-con">
+    <div  id="modal-contact" class="modal-style">
         <div class="modal">
             <h2>Let Us Know</h2>
             <p>Did you notice any improvements we could make? We would love to hear from you.</p>
@@ -74,7 +74,7 @@
     <!-- Modal for rules page -->
 
    
-    <div class="modal-rules">
+    <div  id="modal-rules" class="modal-style">
 
         <div class="modal">
 
@@ -93,7 +93,7 @@
             <br>
             <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.</p>
 
-            <span class="modal-close">X</span>
+            <span class="modal-close-rules">X</span>
 
         </div>
 
