--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -64,7 +64,7 @@
     </div>
 <!-- Modal For Game End -->
 
-    <div class="modal-con">
+    <div id ="modal-end" class="modal-style">
         <div class="modal">
             <h2>Well Done on Completing the Quiz</h2>
             <h2>How do you think you did?</h2>
@@ -72,7 +72,7 @@
             <p>Score: 5-8 I Bet You Could Get 10 Next Time, Good Job</p>
             <p>Score: 0-5 Practice makes permanent. Check the use of the words then come back to have another go.</p>
             
-            <button onclick="modalHome" class="modal-home">Return Home</button>
+            <button class="modal-home">Return Home</button>
         </div>
 
     </div>
