feat: add hover to home button on game page

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -57,8 +57,8 @@
 
     </div>
 
-    
-    <button class="btn-home">Home<i class="fa-solid fa-house"></i></button>
+    <a href="/index.html" class="fa-solid fa-house"></a>
+   
     </div>
 
 
