feat: work on layout on homepage

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h1>Let's Play</h1>
+            <header>
+            <h1>There, They're, or Their Game</h1>
+        </header>
+
+            <h2>The game where you have to complete sentences with there, they're, or their. </h2>
 
             <a href="assets/html/game.html" class="btn">Play</a>
             <a href="#" id="rules-btn" class="btn rules-btn">How To Play</a>
             <a href="#" id="contact-btn" class="btn contact-btn">Contact Us<i class="fa-regular fa-message"></i></a>
-
         </div>
 
     </div>
