--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e62857fc86.js" crossorigin="anonymous"></script>
     <title>Spelling Game</title>
-    <link rel="stylesheet" href="/assets/CSS/style.css">
-    
-    <link rel="stylesheet" href="/assets/CSS/game.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/game.css">
+    <script src="https://kit.fontawesome.com/e62857fc86.js" crossorigin="anonymous"></script>
 </head>
 
 <!--Guidance for this site was taken from the youtube video https://www.youtube.com/watch?v=f4fB9Xg2JEY and adapted to suit my needs -->
