--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Inter&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e62857fc86.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Spelling Game</title>
 </head>
 <body>
