--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -78,6 +78,6 @@
     </div>
 </div>
     
-   <script src="/assets/js/game.js"></script> 
+   <script src="../js/game.js"></script> 
 </body>
 </html>
