feat: change home link

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -57,7 +57,7 @@
 
     </div>
 
-    <a href="/index.html" class="fa-solid fa-house"></a>
+    <a href="index.html" class="fa-solid fa-house"></a>
    
     </div>
 
