feat: begin answer indicators for questions

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -61,6 +61,11 @@
    
     </div>
 
+<!--Answer correct/wrong indicator-->
+<div id="tick-answer-indicator" class="answer-indicator">
+    <i class="fa-solid fa-check tick"></i>
+</div>
+
 
 
 <!-- Modal For Game End -->
