feat: start answer indicator css

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -66,6 +66,13 @@
     <i class="fa-solid fa-check tick"></i>
 </div>
 
+<div id="cross-answer-indicator" class="answer-indicator">
+
+    <i class="fa-solid fa-x cross"></i>
+
+    
+</div>
+
 
 
 <!-- Modal For Game End -->
