--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -81,6 +81,7 @@
         <div class="modal-rules modal">
             <h2>Well Done on Completing the Quiz</h2>
             <h2>How do you think you did?</h2>
+            <h2 id="end-score">endScore</h2>
             <p>Score: 8-10 Great Work Keep Practicing</p>
             <p>Score: 5-8 I Bet You Could Get 10 Next Time, Good Job</p>
             <p>Score: 0-5 Practice makes permanent. Check the use of the words then come back to have another go.</p>
