--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -77,7 +77,7 @@
                 <p>Score: 8-10 Great Work Keep Practicing</p>
                 <p>Score: 5-8 I Bet You Could Get 10 Next Time, Good Job</p>
                 <p>Score: 0-5 Practice makes permanent. Check the use of the words then come back to have another go.</p>
-                <button href="../../index.html" class="modal-home">Return Home</button>
+                <a href="../../index.html" class="modal-home">Return Home</a>
                 </div>   
 
             </div>
