feat: update game page

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <html lang="en">
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +16,6 @@
 
         <div class="game-wrapper">
 
-            <div class="heading">
-                <h1 >Heading for Game </h1>
-            </div> 
-
             <div class="hud-item">
                 <p class="hud-prefix space-below">
                     Score
@@ -32,7 +27,7 @@
             </div>
 
             <div class="question-container">
-                <p id="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec mollis est. In eget hendrerit ipsum. Suspendisse tempor mattis eros sit amet imperdiet. Curabitur vel semper lorem, ut tincidunt sapien.</p>
+                <p id="question"></p>
             </div>
 
             <div class="button-wrapper">
