--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -47,7 +47,9 @@
             </div>
             
             <div class="space-below">
-                <a href="../../index.html" class="fa-solid fa-house"></a>
+                <a href="../../index.html" aria-label="Return Home">
+                    Return Home
+                </a>
             </div>
         </div>
 
@@ -63,7 +65,7 @@
 
         <!-- Modal For Game End -->
 
-            <div id ="modal-end" class="modal-style">
+            <div id ="modal-end" class="modal-style" aria-modal="true" aria-label="Game End Modal">
 
                 <div class="modal">
                 <h2>Well Done on Completing the Quiz</h2>
@@ -72,7 +74,7 @@
                 <p>Score: 8-10 Great Work Keep Practicing</p>
                 <p>Score: 5-8 I Bet You Could Get 10 Next Time, Good Job</p>
                 <p>Score: 0-5 Practice makes permanent. Check the use of the words then come back to have another go.</p>
-                <a href="../../index.html" class="modal-home">Return Home</a>
+                <a href="../../index.html" class="modal-home" aria-label="Return Home">Return Home</a>
                 </div>   
 
             </div>
