feat: change for accessibility, performance, seo, on lighthouse.

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -3,10 +3,12 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="description" content="Educational quiz for English langauage learners. A place to practice spelling of homophones.">
+            <meta name="keywords" content="quiz, children, learner, education, spelling, test, school, English, homophone, fun, educational, learning">
             <title>Spelling Game</title>
+            <script src="https://kit.fontawesome.com/e62857fc86.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="../css/style.css">
             <link rel="stylesheet" href="../css/game.css">
-            <script src="https://kit.fontawesome.com/e62857fc86.js" crossorigin="anonymous"></script>
             <script src="../js/game.js"></script> 
         </head>
 
@@ -65,7 +67,7 @@
 
         <!-- Modal For Game End -->
 
-            <div id ="modal-end" class="modal-style" aria-modal="true" aria-label="Game End Modal">
+            <div id ="modal-end" class="modal-style">
 
                 <div class="modal">
                 <h2>Well Done on Completing the Quiz</h2>
