--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Educational quiz for English langauage learners. A place to practice spelling of homophones.">
+        <meta name="keywords" content="quiz, children, learner, education, spelling, test, school, English, homophone, fun, educational, learning">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Inter&display=swap" rel="stylesheet">
