feat: add fieldset and form elements to modal

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
         <div  id="modal-contact" class="modal-style">
             <div class="modal">
+                <fieldset>
+                    <form action="https://formdump.codeinstitute.net/" method="post">
+
                 <h2>Let Us Know</h2>
                 <p>Did you notice any improvements we could make? We would love to hear from you.</p>
                 <p class="bold">What brought you to the quiz?</p>
@@ -58,7 +61,12 @@
 
                 <button type="submit"><strong>Submit</strong></button>
 
+                </form>
+
+                </fieldset>
+
                 <span class="modal-close">X</span>
+
             </div>
         </div>
 
