feat: continue readMe

--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
                     <li>There are 10 questions complete them all and see how you do</li>
                 </ol>
                 <h2>Refresh Your Understanding</h2>
-                <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms. </p>
-                <br>
-                <p>This will be a brief bit of information about the there/their/they're homonyms.This will be a brief bit of information about the there/their/they're homonyms.</p>
+                <p class="space-below">Let’s recap the three words and their meanings: 'there,' 'their,' and 'they're.' 'There' is for places, like 'I want to go there.' 'Their' is for things that belong to people, such as 'It's their toy.' And 'they're' is just a quicker way of writing 'they are,' like saying 'They're going to the park.'</p>
+                <p>That’s all there is to it, 'there' for places, 'their' for belonging, and 'they're' for they are."</p>
 
                 <span class="modal-close-rules">X</span>
 
